# n2s-trailblazer

./: .editorconfig  .flake8  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .markdownlintrc  .pre-commit-config.yaml  .trailblazer.db  Banner_Identity_Configuration_Guide.md  Banner_Identity_Implementation_Playbook_Consultant_Approach.md  Banner_Identity_Modern_Configuration_Guide.md  Banner_Identity_Technical_Implementation_Guide.md  Findings.md  Makefile  README.md  TEST_STATUS_SUMMARY.md  WARP.md  audit_completeness.py  docker-compose.db.yml  embed_all_runs.sh  embed_all_runs_final.sh  embed_all_runs_fixed.sh  embed_all_runs_original.sh  embed_robust_batched.sh  enrich_all.sh  fix_lines.py  monitor_embedding.sh  mypy.ini  pyproject.toml  ruff.toml  run_all_tests.py  run_qa_retrieval.py  setup.cfg  temp_plan_2025-01-15_1234_abcd.txt  temp_plan_missing_run.txt  temp_plan_test_run.txt  temp_spaces.txt  temp_test_spaces.txt  test_chunker_confluence.py  (+2 more)
configs/: dev.env.example  pipeline.yaml  reembed_openai.yaml
docs/: 2025-01-15-embedding-system-fix.md  2025-08-13-1041-trailblazer-mindfile.md  2025-08-13-1308-trailblazer-mindfile.md  2025-08-13-1358-trailblazer-mindfile.md  2025-08-14-claude-mike-collaboration-mindfile.md  2025-08-18-0839_trailblazer-mindfile (1).md  2025-08-18-0839_trailblazer-mindfile.md  DEV-024-embedding-cleanup-summary.md  IMPLEMENTATION_SUMMARY.md  TESTING.md  chunking_v2_2_guide.md  chunking_v2_guide.md  observability-system-architecture.md  reembed_openai_guide.md  retrieval.md  retrieval_qa_harness.md
logs/: README.md  batched_retry.out  embedding  embedding_process.pid  embedding_progress.txt  nohup.out  prune_report_20250814_104916.json  prune_report_20250814_104922.json  prune_report_20250814_104937.json  prune_report_20250814_105015.json  prune_report_20250814_105030.json  prune_report_20250814_105039.json  prune_report_20250814_115942.json  prune_report_20250814_120225.json  prune_report_20250814_121220.json  prune_report_20250814_130128.json  prune_report_20250815_071614.json  prune_report_20250815_071936.json  prune_report_20250815_072032.json  prune_report_20250815_072054.json  prune_report_20250815_075332.json  prune_report_20250815_075412.json  prune_report_20250815_075424.json  prune_report_20250815_080205.json  prune_report_20250815_081022.json  prune_report_20250815_081258.json  prune_report_20250815_082630.json  prune_report_20250815_083213.json  prune_report_20250815_083338.json  prune_report_20250815_084337.json  prune_report_20250815_084552.json  prune_report_20250815_090012.json  prune_report_20250815_091925.json  prune_report_20250815_103748.json  prune_report_20250815_111237.json  prune_report_20250815_121239.json  prune_report_20250815_121827.json  prune_report_20250815_122549.json  prune_report_20250815_122651.json  prune_report_20250815_164928.json  (+21 more)
notes/: retrieval_discovery.md
prompts/: 000_latest_mindfile.md  000_scaffold_python_monorepo.md  000_shared_guardrails.md  001_bootstrap-context-fix-chunking-and-embed-2x-observable.md  001_dev-internalize-scripts-into-pipeline.md  001_dev-processed-runs-backlog-default-all-unprocessed.md  001_ingest_confluence_v2.md  001_observability-instrumentation-and-monitoring.md  001_quality-hotfix-enrich-orphans-traceability.md  002_dev-logging-conventions-log-mgmt-macos-venv.md  002_dev-zero-scripts-and-golden-path-cli.md  002_harden_ingest_confluence.md  003_merge_ingest_to_main.md  003_ops-reset-rechunk-reembed-all-2x-monitor.md  004_dev_embed_preflight.md  004_normalize_both_storage_and_adf.md  005B_embed_and_graph_v0.md  005_dev_enrich_stabilization.md  005_repo_hardening_ci.md  006_mindfile_and_guardrails_update.md  006_retrieve_and_ask_cli.md  007A_hotfix_space_key.md  007_ingest_observability_and_lifecycle.md  008_console_observability.md  008_implement_embed_manifest.md  008_ingest_execution_isolation_observability.md  009_db_strategy_postgres_first.md  009_postgres_first.md  009_retrieval_updates.md  010_dispatcher_uses_preflight.md  011A_default_adf.md  011B_traceability_and_link_graph.md  011_bodies_only_refresh_mode.md  013A_dita_ingest_core.md  013B_dita_links_and_normalize.md  014_ingest_normalize_stabilization.md  015_path_unification.md  019_dev_ingest_observability_and_assurance.md  020S_dev_cli_simplification.md  021_db_chunk_embed.md  (+24 more)
scripts/: README.md  activate.sh  audit_completeness.py  backup_pg_embeddings.sh  chunk_sweep.sh  continuous_embed.sh  embed.sh  embed_dispatch.sh  enrich_sweep.sh  estimate_embedding_eta.sh  estimate_eta.sh  examples.md  fix_tests.py  ingest.sh  init-db.sql  kill_embedding.sh  migrate_to_var.sh  monitor_confluence_progress.sh  monitor_confluence_simple.sh  monitor_embedding.sh  monitor_ingest.sh  overnight_ingest.sh  process_all_runs.sh  process_all_runs_parallel.sh  qa_retrieval.py  reembed_corpus_openai.sh  restore_pg_embeddings.sh  run_confluence_demo.sh  run_confluence_full.sh  run_confluence_full_robust.sh  run_qa_retrieval.py  show_confluence_status.sh  status.sh  tb.sh  track_pages.sh
tests/: conftest.py  test_adf_preference.py  test_ask_cli.py  test_ask_cli_smoke.py  test_auto_since_state.py  test_chunk_audit_integration.py  test_chunk_step.py  test_chunk_sweep.py  test_chunker_assurance_schema.py  test_chunker_cli_integration.py  test_chunker_confluence.py  test_chunker_determinism.py  test_chunker_runner_integration.py  test_confluence_client_pagination.py  (+49 more)
(+201 files in other folders)
